--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <a
               onclick="toggleOverlay()"
               class="text-decoration-none text-black fw-bold"
-              >Log up</a
+              >Log in</a
             >
           </p>
         </div>
